changed layout if window is under 800px. fixed a bug where character count doesnt change after submission. Fixed bug where white spaces could be included

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -97,3 +97,32 @@ h2 {
   width: 90%;
   color: #192a51;
 }
+
+
+@media all and (max-width: 800px){
+
+  header {
+    display: flex;
+    margin-left: 0px;
+    margin-top: 120px;
+    position: static;
+  }
+
+  .header-main-content {
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .container {
+    position: static;
+    margin: 0%;
+    margin-top: 0px;
+  }
+
+  .avatar {
+    margin-top: 0px;
+  }
+
+
+}
